[gd_scene load_steps=30 format=2]

[ext_resource path="res://Animations/AlienAnimations/BombBall/bomb_ball0003.png" type="Texture" id=1]
[ext_resource path="res://Animations/AlienAnimations/BombBall/bomb_ball0001.png" type="Texture" id=2]
[ext_resource path="res://Animations/AlienAnimations/BombBall/bomb_ball0004.png" type="Texture" id=3]
[ext_resource path="res://Animations/AlienAnimations/BombBall/bomb_ball0002.png" type="Texture" id=4]
[ext_resource path="res://Animations/AlienAnimations/BombBall/bomb_ball0006.png" type="Texture" id=5]
[ext_resource path="res://Animations/AlienAnimations/BombBall/bomb_ball0007.png" type="Texture" id=6]
[ext_resource path="res://Animations/AlienAnimations/BombBall/bomb_ball0008.png" type="Texture" id=7]
[ext_resource path="res://Animations/AlienAnimations/BombBall/bomb_ball0005.png" type="Texture" id=8]
[ext_resource path="res://Animations/AlienAnimations/BombBall/bomb_ball0010.png" type="Texture" id=9]
[ext_resource path="res://Animations/AlienAnimations/BombBall/bomb_ball0009.png" type="Texture" id=10]
[ext_resource path="res://Animations/AlienAnimations/BombBall/bomb_ball0000.png" type="Texture" id=11]
[ext_resource path="res://Scenes/BigAlienBomb.gd" type="Script" id=12]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0005.png" type="Texture" id=13]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0004.png" type="Texture" id=14]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0008.png" type="Texture" id=15]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0001.png" type="Texture" id=16]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0006.png" type="Texture" id=17]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0007.png" type="Texture" id=18]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0011.png" type="Texture" id=19]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0009.png" type="Texture" id=20]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0002.png" type="Texture" id=21]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0000.png" type="Texture" id=22]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0010.png" type="Texture" id=23]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0003.png" type="Texture" id=24]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 46.1736

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 16 ), ExtResource( 21 ), ExtResource( 24 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 20 ), ExtResource( 23 ), ExtResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 125.256

[sub_resource type="CircleShape2D" id=5]
radius = 43.0116

[node name="BigBomb" type="RigidBody2D"]
collision_layer = 4
collision_mask = 4
mode = 2
mass = 4.0
gravity_scale = 4.0
linear_velocity = Vector2( -1000, 0 )
linear_damp = 0.0
script = ExtResource( 12 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 10
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="ExplosionTimer" type="Timer" parent="."]
autostart = true

[node name="Explosion" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 0.901961, 0.584314, 0.407843, 1 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 3 )
frame = 7

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )
disabled = true

[node name="PlayerCollision" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision"]
shape = SubResource( 5 )

[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="PlayerCollision" to="." method="_on_PlayerCollision_body_entered"]
